Fix nav z-index

--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ body > header {
 body > nav {
   position: sticky;
   top: 0;
+  z-index: 1;
 }
 
 main {
